--- a/boot/efi/EFI/refind/themes/arco-catppuccin-mocha/theme.conf
+++ b/boot/efi/EFI/refind/themes/arco-catppuccin-mocha/theme.conf
@@ -78,4 +78,4 @@ selection_small themes/arco-catppuccin-mocha/assets/mocha/selection_small.png
 #                    user interface (ignored on older computers)
 # Default is shell,apple_recovery,mok_tool,about,shutdown,reboot,firmware
 #
-showtools reboot,shutdown,firmware
+#showtools reboot,shutdown,firmware
